fixed shifted blocks + carousel bgc instead shadow

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -259,10 +259,10 @@
               background-color: #fff;
               border-radius: 50%;
               text-align: center;
-              transition: box-shadow 200ms ease-in-out;
+              transition: background-color 200ms ease-in-out;
 
               &:hover {
-                box-shadow: 0 0 12px 12px $main-dark-blue-color inset;
+                background-color: $main-dark-blue-color-rgba;
               }
 
               .arrow-img {
