--- a/src/styles/_main-content.scss
+++ b/src/styles/_main-content.scss
@@ -72,10 +72,6 @@
             img {
               border-radius: 16px;
               transition: 300ms;
-  
-              // &:hover { not used
-              //   transform: scale(1.1);
-              // }  this was before hover on service was added
             }
           }
         } //&__pict
@@ -92,7 +88,6 @@
           font-size: 14px;
           text-align: center;
         }
-
       } // service
     } //&__services
   } //expertise
@@ -172,12 +167,40 @@
           height: $process-block-dimension;
           background-color: #fff;
           border-radius: 16px;
-          padding: 32px;
           box-sizing: border-box;
           position: relative;
+          z-index: 99;
 
           &:last-child {
             margin-top: 30px;
+          }
+
+          & a {
+            display: block;
+            padding: 32px;
+            height: 100%;
+
+          }
+
+          .arrow-img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: #2060f6;
+            line-height: 45px;
+            text-align: center;
+            display: inline-block;
+            margin-right: 16px;
+            transition: transform 300ms;
+
+            &__img {
+              width: 16px;
+              height: 16px;
+            }
+          }
+
+          &:hover .arrow-img {
+            transform: scale(1.2);
           }
 
           &__number {
@@ -208,38 +231,30 @@
             width: 159px;
             border-radius: 20px;
 
-            & a {
-              display: block;
+            // .arrow-img {
+            //   width: 40px;
+            //   height: 40px;
+            //   border-radius: 50%;
+            //   background: #2060f6;
+            //   line-height: 45px;
+            //   text-align: center;
+            //   display: inline-block;
+            //   margin-right: 16px;
+            //   transition: transform 300ms;
 
-              .arrow-img {
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                background: #2060f6;
-                line-height: 45px;
-                text-align: center;
-                display: inline-block;
-                margin-right: 16px;
-                transition: transform 300ms;
-  
-                &__img {
-                  width: 16px;
-                  height: 16px;
-                }
-              }
-  
-              &:hover .arrow-img {
-                transform: scale(1.2);
-              }
-  
-              p {
-                @include heading-style;
-                font-size: 15px;
-                position: relative;
-                bottom: 2px;
-                display: inline-block;
-              }
-            } // &__link a
+            //   &__img {
+            //     width: 16px;
+            //     height: 16px;
+            //   }
+            // }
+
+            p {
+              @include heading-style;
+              font-size: 15px;
+              position: relative;
+              bottom: 2px;
+              display: inline-block;
+            }
           } // &__link
 
         } // block
@@ -249,5 +264,17 @@
     } // __blocks
 
   } // process
+
+  .approach-outter {
+    padding-left: 121px;
+
+    .approach-inner {
+      background: #2c2c2c;
+      border-radius: 30px 0 0 30px;
+      padding: 204px 0 0 204px;
+      position: relative; // will be used fo positioning the img
+      
+    } // approach-inner
+  } // approach-outter
 
 } //main-content
