--- a/src/styles/_mixins-vars.scss
+++ b/src/styles/_mixins-vars.scss
@@ -38,3 +38,5 @@ $process-block-dimension: 264px;
 
 $main-grey-color-rgba: rgba(213, 213, 213, 0.2);
 $main-dark-blue-color: #2060f6;
+
+$main-dark-blue-color-rgba: rgba($color: #2060f6, $alpha: 0.2);
